# cdcflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
benchmark/: Dockerfile  docker-compose.yml  run.sh
benchmark/configs/: cdcflow-docker.json
benchmark/init/postgres/: init.sql
example/: docker-compose.yml
example/configs/: mysql-to-iceberg-replication.json  mysql-to-iceberg.json  mysql-to-kafka.json  mysql-to-pg-replication.json  mysql-to-pg.json  mysql-to-stdout.json  pg-to-iceberg-replication.json  pg-to-iceberg.json  pg-to-kafka.json  pg-to-pg-replication.json  pg-to-pg.json  pg-to-stdout.json
example/init/mysql/: init.sql
example/init/postgres/: init.sql
example/init/postgres-dest/: init.sql
example/init/trino/: iceberg.properties
src/: error.rs  event.rs  lib.rs  main.rs  pipeline.rs
src/admin/: client.rs  mod.rs  sqlite.rs  store.rs
src/admin/routes/: jobs.rs  metrics.rs  mod.rs  workers.rs
src/config/: iceberg_sink.rs  kafka_sink.rs  mod.rs  mysql_source.rs  offset.rs  postgres_sink.rs  postgres_source.rs  sink.rs  source.rs
src/metrics/: mod.rs
src/offset/: memory.rs  mod.rs  sqlite.rs
src/schema/: discovery.rs  evolution.rs  mod.rs  type_mapping.rs  value.rs
src/sink/: mod.rs  stdout.rs
src/sink/iceberg/: mod.rs  record_batch.rs  row_delta.rs  schema_builder.rs  schema_evolution.rs  type_mapping.rs
src/sink/kafka/: mod.rs
src/sink/postgres/: mod.rs  schema.rs
src/source/: mod.rs
src/source/mysql/: binlog_stream.rs  event_converter.rs  mod.rs  snapshot.rs
src/source/postgres/: event_converter.rs  mod.rs  publication.rs  relation_cache.rs  replication_client.rs  replication_stream.rs  slot.rs  snapshot.rs
src/source/postgres/protocol/: messages.rs  mod.rs  parser.rs  tuple.rs
src/worker_http/: mod.rs  registration.rs  routes.rs
tests/: admin_integration.rs  iceberg_integration.rs  kafka_integration.rs  mysql_integration.rs  postgres_integration.rs  postgres_sink_integration.rs
